# vtk-begin

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
Apps/DemoApp/: CMakeLists.txt  MainWindow.cpp  MainWindow.ui  main.cpp
Apps/DemoApp/QResources/: appicon.rc  resources.qrc
Apps/DemoApp/QResources/Translations/: zh_CN.qm  zh_CN.ts
Tests/: CMakeLists.txt
